fixed some spacing issues

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -22,11 +22,11 @@ color:darkgrey;
 
 .buttonWrapper{
   width: 100%;
-  height: 150px;
+  height:100px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-}
+  justify-content: center;
+  }
 
 .generatorCard {
   border-radius: 5px;
